feature added (#14)